--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,8 @@
 include: package:very_good_analysis/analysis_options.yaml
+analyzer:
+  errors:
+    strict_raw_type: ignore
+    avoid_catches_without_on_clauses: ignore
 
 linter:
   rules:
